--- a/TP5-RochaCristianAlberto-Frontend/src/app/components/punto1-list/punto1-list.component.css
+++ b/TP5-RochaCristianAlberto-Frontend/src/app/components/punto1-list/punto1-list.component.css
@@ -1,3 +1,33 @@
 .carta{
-    border: solis 3px black;
+    border: solis 3px black;  
 }
+.card{
+    float: left;
+    
+}
+.imagen{
+    width: 100%;
+    height: 200px;
+}
+.borde {
+    border: solid 2px black;
+    
+
+}
+.card-subtitle {
+
+    font-size: 100%;
+    font-size: 18px;
+    white-space: break-spaces;
+    margin: auto;
+}
+
+.card-text {
+    font-size: 100%;
+
+}
+.card-title {
+    font-size: 18px;
+    white-space: break-spaces;
+    margin: auto;
+  }
