--- a/TP5-RochaCristianAlberto-Frontend/src/app/components/punto1-list/punto1-list.component.html
+++ b/TP5-RochaCristianAlberto-Frontend/src/app/components/punto1-list/punto1-list.component.html
@@ -1,13 +1,15 @@
 <div class="col-md-12 carta">
     <h3 class="text-center">Productos Destacados</h3>
-    <div class="card col-lg-3 col-md-6 col-12" *ngFor="let destacados of productosDestacados">
-        <br>
-        <img [src]="destacados.imagen" class="card-img-top h-50" alt="...">
-        <h3 class="card-title text-center"><strong>Título: {{destacados.nombre}}</strong></h3>
-        <div class="card-body">
-            <p class="card-text"><strong>Descripcion: {{destacados.descripcion}}</strong></p>
-            <p class="card-text"><strong>Precio: ${{destacados.precio}}</strong></p>
-            <p class="card-text"><strong>Stock: {{destacados.stock}} unidades</strong></p> 
+    <div class="borde card col-lg-3 col-md-6 col-12" *ngFor="let destacados of productosDestacados">
+        <div class="margen">
+            <br>
+            <img [src]="destacados.imagen" class="imagen" alt="...">
+            <h3 class="card-title text-center"><strong>Título: {{destacados.nombre}}</strong></h3>
+            <div class="card-body">
+                <p class="card-subtitle"><strong>Descripcion: {{destacados.descripcion}}</strong></p>
+                <p class="card-text"><strong>Precio: ${{destacados.precio}}</strong></p>
+                <p class="card-text"><strong>Stock: {{destacados.stock}} unidades</strong></p>
+            </div>
         </div>
     </div>
 </div>
